[gd_scene load_steps=19 format=3 uid="uid://b5j2ltpjqbhcj"]

[ext_resource type="Texture2D" uid="uid://ca2ab3du0jccn" path="res://Sunnyland/sprites/enemy-death/enemy-death-1.png" id="1_cb7hg"]
[ext_resource type="Script" path="res://Frog.gd" id="1_ucocb"]
[ext_resource type="Texture2D" uid="uid://c6y62s2edd3s4" path="res://Sunnyland/sprites/enemy-death/enemy-death-2.png" id="2_tupcy"]
[ext_resource type="Texture2D" uid="uid://bp7bsskukdwv" path="res://Sunnyland/sprites/enemy-death/enemy-death-3.png" id="3_251f0"]
[ext_resource type="Texture2D" uid="uid://432v457n0jup" path="res://Sunnyland/sprites/enemy-death/enemy-death-4.png" id="4_unf1x"]
[ext_resource type="Texture2D" uid="uid://dopper7dye1a7" path="res://Sunnyland/sprites/enemy-death/enemy-death-5.png" id="5_joxfv"]
[ext_resource type="Texture2D" uid="uid://c5a62lxgcwmrh" path="res://Sunnyland/sprites/enemy-death/enemy-death-6.png" id="6_qnxmg"]
[ext_resource type="Texture2D" uid="uid://b7wkvdy0nj512" path="res://Sunnyland/spritesheets/frog/idle/frog-idle-1.png" id="7_yj4bi"]
[ext_resource type="Texture2D" uid="uid://bx7ipuq6yw88p" path="res://Sunnyland/spritesheets/frog/idle/frog-idle-2.png" id="8_kehrq"]
[ext_resource type="Texture2D" uid="uid://cknsax01xm1fq" path="res://Sunnyland/spritesheets/frog/idle/frog-idle-3.png" id="9_fbat5"]
[ext_resource type="Texture2D" uid="uid://f2eyn6cknfv7" path="res://Sunnyland/spritesheets/frog/idle/frog-idle-4.png" id="10_gqte2"]
[ext_resource type="Texture2D" uid="uid://bvfq4ajnw8qn5" path="res://Sunnyland/spritesheets/frog/jump/frog-jump-1.png" id="11_jeg3m"]
[ext_resource type="Texture2D" uid="uid://c0wtignovy273" path="res://Sunnyland/spritesheets/frog/jump/frog-jump-2.png" id="12_adw30"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_li5uw"]
size = Vector2(12.7089, 5.07843)

[sub_resource type="SpriteFrames" id="SpriteFrames_qgp1x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_cb7hg")
}, {
"duration": 1.0,
"texture": ExtResource("2_tupcy")
}, {
"duration": 1.0,
"texture": ExtResource("3_251f0")
}, {
"duration": 1.0,
"texture": ExtResource("4_unf1x")
}, {
"duration": 1.0,
"texture": ExtResource("5_joxfv")
}, {
"duration": 1.0,
"texture": ExtResource("6_qnxmg")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("8_kehrq")
}, {
"duration": 1.0,
"texture": ExtResource("9_fbat5")
}, {
"duration": 1.0,
"texture": ExtResource("10_gqte2")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}, {
"duration": 1.0,
"texture": ExtResource("7_yj4bi")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_jeg3m")
}, {
"duration": 1.0,
"texture": ExtResource("12_adw30")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dp1jj"]
radius = 182.431

[sub_resource type="RectangleShape2D" id="RectangleShape2D_45ob2"]
size = Vector2(8.97094, 10.7211)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8e25e"]
size = Vector2(14.204, 4.51416)

[node name="Frog" type="CharacterBody2D"]
script = ExtResource("1_ucocb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 5.5)
scale = Vector2(1.33765, 1.7722)
shape = SubResource("RectangleShape2D_li5uw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qgp1x")
animation = &"death"

[node name="Vision" type="Area2D" parent="."]
scale = Vector2(1.33765, 1.7722)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
visible = false
shape = SubResource("CircleShape2D_dp1jj")

[node name="HurtBox" type="Area2D" parent="."]
scale = Vector2(1.33765, 1.7722)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
visible = false
position = Vector2(-0.747578, 0.846404)
shape = SubResource("RectangleShape2D_45ob2")

[node name="HitBox" type="Area2D" parent="."]
scale = Vector2(1.33765, 1.7722)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-0.373781, 3.38562)
shape = SubResource("RectangleShape2D_8e25e")

[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
[connection signal="body_exited" from="Vision" to="." method="_on_vision_body_exited"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
